syntax = "proto3";

package witness;

//TODO: replace  bytes content to oneof
message WitnessMessage {
    uint32 conciliumId=1;
    bytes content=2;
}

// -------------- NEXT_ROUND -----
message NextRound {
    uint32 roundNo =1;
}

// -------------- MSG_WITNESS_BLOCK_VOTE -----
message BlockVote {
    bytes blockHash=1;

    // unused for reject
    bytes signature=2;
}
